# ekalivan

./: .env.example  .gitignore  APP_FUNCTIONALITY_AND_EXECUTIVE_SUMMARY.md  EKALIVAN_UI_MODERNIZATION_ROADMAP.md  Executive_Architecture_Design_Document (1).md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  textbook_video.db
backend/alembic/: env.py
backend/alembic/versions/: 20260712_0001_create_video_jobs.py  20260713_0002_add_intake_columns.py  20260714_0003_add_sections_column.py  20260716_0004_add_storyboard_beats_column.py  20260717_0005_add_narrated_beats_column.py  20260718_0006_add_output_video_path_column.py  20260718_0008_add_progress_node_column.py  20260719_0007_add_video_url_column.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  dependencies.py  errors.py  interfaces.py  logging.py  retry.py  telemetry.py
backend/app/features/: __init__.py
backend/app/features/video_generator/: __init__.py  agents.py  db_models.py  graph.py  icon_library.py  mcp_tools.py  models.py  repository.py  router.py  service.py
backend/app/infrastructure/: __init__.py  database.py  fallback_llm_provider.py  llm_provider.py  storage.py
backend/tests/: conftest.py  test_agents.py  test_fallback_llm_provider.py  test_graph.py  test_health.py  test_icon_library.py  test_llm_provider.py  test_mcp_tools.py  test_retry.py  test_skills.py  test_storage.py  test_stress.py  test_telemetry.py  test_video_repository.py  test_video_router.py  test_video_service.py
backend/tests/fixtures/: sample_chapter.txt
(+163 files in other folders)
