[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textbook-video-backend"
version = "0.1.0"
description = "Async API gateway for the textbook-to-video learning platform."
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiofiles>=24.0,<25.0",
  "alembic>=1.14,<2.0",
  "asyncpg>=0.30,<1.0",
  "edge-tts>=7.0,<8.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "langgraph>=0.2,<1.0",
  "markitdown>=0.1.1,<1.0",
  "pydantic-settings>=2.7,<3.0",
  "pyyaml>=6.0,<7.0",
  "sqlalchemy[asyncio]>=2.0.36,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.1,<26.0",
  "mypy>=1.15,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.9,<1.0",
  "aiosqlite>=0.20,<1.0",
  "types-aiofiles>=24.0,<25.0",
  "types-PyYAML>=6.0,<7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"
preview = true
lint.select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "DOC"]
lint.ignore = ["B008", "D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_any_generics = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
